@@ -34,9 +34,13 @@ filebeat.modules:
 
 output.redis:
   hosts: [ "redis://{{frontend.redis_server}}:{{frontend.redis_port}}" ]
-  {% if frontend.redis_password|length %}
+  {% if frontend.redis_password|length -%}
   password: "{{frontend.redis_password}}"
-  {% endif %}
+  {% elif frontend.redis_server == "127.0.0.5" and frontend.redis_port == 6379 -%}
+  {% if cluster_redis_password|length -%}
+  password: "{{cluster_redis_password}}"
+  {% endif -%}
+  {% endif -%}
   key: "filebeat_{{frontend.tenants_config.id}}_{{frontend.id}}"
   datatype: list
   db: 0
