@@ -52,7 +52,13 @@ module(load="omsentinel")
     input(type="imhiredis"
         Server="{{ frontend.redis_server }}"
         Port="{{ frontend.redis_port }}"
+        {% if frontend.redis_password|length -%}
         Password="{{ frontend.redis_password }}"
+        {% elif frontend.redis_server == "127.0.0.5" and frontend.redis_port == 6379 -%}
+        {% if cluster_redis_password|length -%}
+        Password="{{ cluster_redis_password }}"
+        {% endif -%}
+        {% endif -%}
         Key="filebeat_{{ frontend.tenants_config.id }}_{{ frontend.id }}"
         Mode="queue"
         Uselpop="on"
@@ -82,7 +88,13 @@ module(load="omsentinel")
             Key="{{ frontend.redis_key }}"
             Mode="{{ frontend.redis_mode }}"
             Uselpop="{% if frontend.redis_use_lpop %}on{% else %}off{% endif %}"
+            {% if frontend.redis_password|length -%}
             Password="{{ frontend.redis_password }}"
+            {% elif frontend.redis_server == "127.0.0.5" and frontend.redis_port == 6379 -%}
+            {% if cluster_redis_password|length -%}
+            Password="{{ cluster_redis_password }}"
+            {% endif -%}
+            {% endif -%}
             {% if frontend.redis_mode == "stream" -%}
             {%- if frontend.redis_stream_consumerGroup -%}
             stream.consumerGroup="{{ frontend.redis_stream_consumerGroup }}"
